--- a/Weatherapp/public/index.html
+++ b/Weatherapp/public/index.html
@@ -2,110 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Time Weather App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./icon.png">
+    <title>Weather App</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Weather Data Fetching App</h1>
-        <div>
-            <input type="text" name="" id="input" placeholder="Enter city name">
-            <button id="search" onclick="searchByCity()">Search</button></input>
-            <div id="error"></div>
-        </div>
+    <div id="weather-container">
+        <h2>Weather App</h2>
+        <input type="text" id="city" placeholder="Enter city">
+        <button onclick="getWeather()">Search</button>
+
+        <img id="weather-icon" alt="Weather Icon">
+
+        <div id="temp-div"></div>
+
+        <div id="weather-info"></div>
+
+        <div id="hourly-forecast"></div>
     </div>
-
-    <main>  
-        <div class="weather">
-            <h2 id="city">Kigali, RW</h2>
-            <div class="temp-box">
-                <img src="./weathericon.png" alt="Example" id="img">
-                <p id="temperature">26 °C</p>
-            </div>
-            <span id="clouds">Broken Clouds</span>
-        </div>
-        <div class="divider1"></div>
-
-        <div class="forecstH">
-            <p class="cast-header">Upcoming forecast</p>
-            <div class="templist">
-
-                <div class="next">
-                    <div>
-                        <p class="time">8:30 PM</p>
-                        <p>29 °C / 29 °C</p>
-                    </div>
-                    <p class="desc">Light Rain</p>
-                </div>
-
-                <div class="next">
-                    <div>
-                        <p class="time">8:30 PM</p>
-                        <p>29 °C / 29 °C</p>
-                    </div>
-                    <p class="desc">Light Rain</p>
-                </div>
-
-                <div class="next">
-                    <div>
-                        <p class="time">8:30 PM</p>
-                        <p>29 °C / 29 °C</p>
-                    </div>
-                    <p class="desc">Light Rain</p>
-                </div>
-
-                <div class="next">
-                    <div>
-                        <p class="time">8:30 PM</p>
-                        <p>29 °C / 29 °C</p>
-                    </div>
-                    <p class="desc">Light Rain</p>
-                </div>
-
-                <div class="next">
-                    <div>
-                        <p class="time">8:30 PM</p>
-                        <p>29 °C / 29 °C</p>
-                    </div>
-                    <p class="desc">Light Rain</p>
-                </div>
-
-            </div>
-        </div>
-    </main>
-    <div class="forecstD">
-        <div class="divider2"></div>
-        <p class="cast-header"> Next 4 days forecast</p>
-        <div class="weekF">
-
-            <div class="dayF">
-                <p class="date">Sun Jul 03 2022</p>
-                <p>31 °C / 31 °C</p>
-                <p class="desc">Overcast Clouds</p>
-            </div>
-
-            <div class="dayF">
-                <p class="date">Sun Jul 03 2022</p>
-                <p>31 °C / 31 °C</p>
-                <p class="desc">Overcast Clouds</p>
-            </div>
-
-            <div class="dayF">
-                <p class="date">Sun Jul 03 2022</p>
-                <p>31 °C / 31 °C</p>
-                <p class="desc">Overcast Clouds</p>
-            </div>
-
-            <div class="dayF">
-                <p class="date">Sun Jul 03 2022</p>
-                <p>31 °C / 31 °C</p>
-                <p class="desc">Overcast Clouds</p>
-            </div>
-        </div>
-    </div>
+    <div id="filters">
+        <label>Min Temp: <input type="number" id="min-temp" placeholder="°C"></label>
+        <label>Max Temp: <input type="number" id="max-temp" placeholder="°C"></label>
+        <button onclick="applyFilter()">Apply Filter</button>
+      </div>      
     <script src="./script.js"></script>
 </body>
 </html>
